@@ -43,6 +43,9 @@ if (isActionAccessible($guid, $connection2, '/modules/School Admin/studentsSetti
     $academicAlertLowThreshold = $_POST['academicAlertLowThreshold'];
     $academicAlertMediumThreshold = $_POST['academicAlertMediumThreshold'];
     $academicAlertHighThreshold = $_POST['academicAlertHighThreshold'];
+    $behaviourAlertLowThreshold = $_POST['behaviourAlertLowThreshold'];
+    $behaviourAlertMediumThreshold = $_POST['behaviourAlertMediumThreshold'];
+    $behaviourAlertHighThreshold = $_POST['behaviourAlertHighThreshold'];
     $extendedBriefProfile = $_POST['extendedBriefProfile'];
     $studentAgreementOptions = '';
     foreach (explode(',', $_POST['studentAgreementOptions']) as $agreement) {
@@ -92,6 +95,33 @@ if (isActionAccessible($guid, $connection2, '/modules/School Admin/studentsSetti
     try {
         $data = array('value' => $academicAlertHighThreshold);
         $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='Students' AND name='academicAlertHighThreshold'";
+        $result = $connection2->prepare($sql);
+        $result->execute($data);
+    } catch (PDOException $e) {
+        $fail = true;
+    }
+
+    try {
+        $data = array('value' => $behaviourAlertLowThreshold);
+        $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='Students' AND name='behaviourAlertLowThreshold'";
+        $result = $connection2->prepare($sql);
+        $result->execute($data);
+    } catch (PDOException $e) {
+        $fail = true;
+    }
+
+    try {
+        $data = array('value' => $behaviourAlertMediumThreshold);
+        $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='Students' AND name='behaviourAlertMediumThreshold'";
+        $result = $connection2->prepare($sql);
+        $result->execute($data);
+    } catch (PDOException $e) {
+        $fail = true;
+    }
+
+    try {
+        $data = array('value' => $behaviourAlertHighThreshold);
+        $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='Students' AND name='behaviourAlertHighThreshold'";
         $result = $connection2->prepare($sql);
         $result->execute($data);
     } catch (PDOException $e) {
